[package]
name = "radiorust"
version = "0.0.4"
authors = ["Jan Behrens <jbe@magnetkern.de>"]
edition = "2021"
description = "Software Defined Radio using the Tokio runtime"
repository = "https://github.com/JanBeh/radiorust"
license = "MIT OR Apache-2.0"
keywords = ["sdr", "radio"]

[features]
full-io = ["cpal", "soapy"]
cpal = ["dep:cpal"]
soapy = ["dep:soapysdr"]

[dependencies]
soapysdr = { version = "0.3.2", optional = true }
num = "0.4.0"
rustfft = "6.0.1"
cpal = { version = "0.14.0", optional = true }
tokio = { version = "1.21.1", features = ["full"] }

[dev-dependencies]
#relm4 = { version = "0.4.4", features = ["tokio-rt"] }
relm4 = { version = "0.4.4" }
relm4-macros = { version = "0.4.4" }

[[example]]
name = "relm_app"
required-features = ["cpal", "soapy"]

[package.metadata.docs.rs]
no-default-features = true
