[package]
name = "radiorust"
version = "0.3.0"
authors = ["Jan Behrens <jbe@magnetkern.de>"]
edition = "2021"
description = "Software Defined Radio using the Tokio runtime"
repository = "https://github.com/JanBeh/radiorust"
license = "MIT OR Apache-2.0"
keywords = ["sdr", "radio"]

[features]
full-io = ["cpal", "soapysdr"]
cpal = ["dep:cpal"]
soapysdr = ["dep:soapysdr"]
send_reservation = ["parking_lot/send_guard"]

[dependencies]
soapysdr = { version = "0.3.2", optional = true }
num = "0.4.0"
rustfft = "6.0.1"
cpal = { version = "0.14.0", optional = true }
tokio = { version = "1.21.1", features = ["full"] }
parking_lot = "0.12.1"

[dev-dependencies]
#relm4 = { version = "0.4.4", features = ["tokio-rt"] }
relm4 = { version = "0.4.4" }
relm4-macros = { version = "0.4.4" }
clap = { version = "4.0.17", features = ["derive"] }
rustyline = "10.0.0"

[profile.dev]
debug-assertions = false
overflow-checks = false
opt-level = 3

[profile.test]
debug-assertions = true
overflow-checks = true
opt-level = 0

[[example]]
name = "relm_app"
required-features = ["cpal", "soapysdr"]

[[example]]
name = "morse"
required-features = ["cpal"]

[[example]]
name = "bandwidth_meter"
required-features = ["soapysdr"]

[[example]]
name = "audiopipe"
required-features = ["cpal"]

[package.metadata.docs.rs]
no-default-features = true
